chapter-10-workload-identities/base/service-mesh/gateway.yaml
#############################################################################
# Use a single ingress gateway with an OpenSSL generated wildcard certificate
#############################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: external-tls
    hosts:
    - "*.democluster.example"
